--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
         </nav> 
 
         <div class="js">
-            <button class="btn" id="newQuoteSection" onClick="getQuote()">new quote</button>
+            <button class="btn" id="newQuoteSection" onClick="getQuote()">Press me for a Quote!</button>
         </div>
     </nav> 
-    <br>
-    <br> 
-     
+
     </div>
 </body> 
 </html>
