--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         </nav> 
         <div class="js">
             <button class="btn" id="newQuoteSection" onClick="getQuote()">Press me for a Quote!</button>
+            <div class="quote-section"> 
+            </div>
         </div>
     </nav> 
     </div>
