made responsive with media queries and rewrite main theme

--- a/index.html
+++ b/index.html
@@ -2,22 +2,25 @@
 <html>
 <head>
     <link rel="stylesheet" href="styles.css">
-    <title>QUOTE GEN JS</title>
-</head>
-<body> 
-    <script src="app.js"></script>
-<nav> 
-    <div class="container"> 
-        <h1>Mr Robot Quote generator</h1> 
-        </div>   
-        </nav> 
-        <div class="js">
-            <button class="btn" id="newQuoteSection" onClick="getQuote()">Press me for a Quote!</button>
-            <div class="quote-section"> 
-            </div>
-        </div>
-    </nav> 
-    </div>
+    <link href="https://fonts.googleapis.com/css?family=Lora|Ubuntu:400,700&display=swap" rel="stylesheet"> 
 
-</body> 
-</html>
+</head>
+
+<body>
+    <header>
+        <div class="title">
+            <div class="container container-nav">
+                <h1>Mr Robot quote generator</h1>
+                <p class="subtitle">made with HTML, CSS & Vanilla JS</p>
+                <nav>
+                    <ul>
+                        <li><a href="index.html" class="homepage">Home</a></li>
+                    </ul>
+            </div> 
+            </header>
+
+            <div class="js-section"> 
+                <button class="btn" id="quoteOutput" onClick="getQuote()">Press me for a quote...</button>
+                </div>
+<script src="app.js"></script>
+</body>
